      (http://www.zope.org/Collectors/CMF/246)

  Others

    - CMFCatalogAware: refactoring. Defines now 2 methods,
      _getCatalogTool() and _getWorkflowTool(), that are used to find
      the catalog and workflow tool. It's now possible to override
      these methods using inheritence for a given content type to
      specify another catalog or workflow tool the content type can
      use

CMF 1.5.4 (2005/09/04)

  Bug Fixes

    - CatalogTool: Made sure the catalog_object method works with Zope 2.8.
      The new 'pghandler' argument was missing. This broke at least the
      refreshCatalog method used by 'Update Catalog'.
      (http://www.zope.org/Collectors/CMF/379)

CMF 1.5.4-beta (2005/08/28)

  Bug Fixes

    - CMFCore.utils: The return value from _mergedLocalRoles allowed
      direct manipulation of objects' local role settings since it
      contained references to the actual values instead of copies.
      (http://www.zope.org/Collectors/CMF/376)

    - CMFTopic.DateCriteria: The behavior and naming of date criteria
      operators was very confusing and in many cases unexpected and 
      wrong. For that reason e.g. Plone replaced the implementation
      with a more user-friendly handling which is hereby introduced
      to CMF proper. (http://www.zope.org/Collectors/CMF/339)

    - CMFCore.PortalContent, CMFCore.FSSTXMethod, CMFTopic.Topic,
      CMFDefault.SkinnedFolder: Cache headers from the Caching Policy Manager
      never got set for DTML-based skins due to the way the view template
      __call__ method was invoked. (http://www.zope.org/Collectors/CMF/374)

    - CMFCore.FSImage and FSFile: Unlike the current behavior of Zope itself,
      FSImage and FSFile would set a content-length response header for 304
      (not modified) responses, which should not be done according to 
      RFC 2616. It won't do so anymore, but Zope itself will still force a
      content-length header in ZServer.HTTPResponse. This misbehavior